--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,6 +20,13 @@
 <body>
   <header>
     <h1>LumberJackOverFlow</h1>
+    <nav class= "navbar">
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/login">login</a></li>
+      <li><a href="/users/new">register</a></li>
+    </ul>
+  </nav>
   </header>
   <%= yield %>
 </body>
