--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,8 @@
+<div class="headline">
+	<a href="/questions/ask">Ask a Question</a>
+</div>
 <div class= "container">
+
 	<% @questions.each do |question| %>
 	
 	<article id= '<%= question.id %>'>
