--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -21,11 +21,20 @@
   <header>
     <h1>LumberJackOverFlow</h1>
     <nav class= "navbar">
-    <ul>
-      <li><a href="/">home</a></li>
-      <li><a href="/login">login</a></li>
-      <li><a href="/users/new">register</a></li>
-    </ul>
+
+      <%  if current_user %>
+      <button><a href="/">home</a></button>
+      <form action="/logout" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <input type="submit" value="logout">
+      </form>
+
+      <% else %>
+        <button><a href="/">home</a></button>
+        <button><a href="/login">login</a></button>
+        <button><a href="/login">register</a></button>
+      <% end %>
+
   </nav>
   </header>
   <%= yield %>
