--- a/app/views/questions/ask.erb
+++ b/app/views/questions/ask.erb
@@ -1,8 +1,8 @@
 <div class="question-form">
 	<form action="/questions" method="POST">
 		<label for="title">Title:</label>
-		<input id="question[title]" type="text">
-		<input id="question[content]" type="text" placeholder="Type your question here">
+		<input name="question[title]" type="text" placeholder="Title">
+		<input name="question[content]" type="text" placeholder="Type your question here">
 		<input type="submit" value="Ask Question">
 	</form>
 </div>
