--- a/app/views/User/login.erb
+++ b/app/views/User/login.erb
@@ -1,9 +1,16 @@
 <div>
+
+
    <h1> Create a log in! </h1>
      <form method="post" action="/signup">
        <input name="email" type="text" placeholder="Email Address">
        <input name="username" type="text" placeholder="Username">
        <input name="password" type="text" placeholder="Password">
+       <% if @errors %>
+          <% @errors.each do |error| %>
+          <%= error %>
+        <% end %>
+      <% end %>
        <p></p>
          <input type="submit" value="Enter our Database!">
     <p></p>
