--- a/app/views/User/login.erb
+++ b/app/views/User/login.erb
@@ -20,6 +20,9 @@
      <form method="post" action="/login">
        <input name="email" type="text" placeholder="Email">
         <input name="password" type="text" placeholder="Password">
+        <% if @unmatch %>
+          <%= @unmatch %>
+        <% end %>
         <p></p>
        <input type="submit" value="LOG IN NOW!">
      </form>
