--- a/app/views/User/login.erb
+++ b/app/views/User/login.erb
@@ -2,10 +2,10 @@
 
 
    <h1> Create a log in! </h1>
-     <form method="post" action="/signup">
+     <form method="post" action="/signup" autocomplete="off">
        <input name="email" type="text" placeholder="Email Address">
        <input name="username" type="text" placeholder="Username">
-       <input name="password" type="text" placeholder="Password">
+       <input name="password" type="password" placeholder="Password">
        <% if @errors %>
           <% @errors.each do |error| %>
           <%= error %>
@@ -17,9 +17,9 @@
       </form>
        <p> </p>
        <h5> Already a valued member?</h5>
-     <form method="post" action="/login">
+     <form method="post" action="/login" autocomplete= "off">
        <input name="email" type="text" placeholder="Email">
-        <input name="password" type="text" placeholder="Password">
+        <input name="password" type="password" placeholder="Password">
         <% if @unmatch %>
           <%= @unmatch %>
         <% end %>
