answers work now totally

--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -15,7 +15,8 @@
     </form>
   </div>
 </div>
+<div id="answer-container">
 <%= erb :"questions/_answers", locals: {answers: @answers}  %>
-
+</div>
 <button><a href="#">Add a comment!</a></button>
 
