Add files for css

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,10 +5,12 @@
 
 	<% @questions.each do |question| %>
 	
-	<article id= '<%= question.id %>'>
-		<div class="votes"><%= question.votes.count %> Votes</div>
-		<div class="answers"><%= question.answers.count %> Answers</div>		
-		<a href="/questions/<%= question.id %>"	><%= question.title %></a>
+	<ul id= '<%= question.id %>'>
+		<li><a href="/questions/<%= question.id %>"	><%= question.title %></a></li>
+		<li class="votes"><%= question.votes.count %> Votes</li>
+		<li class="answers"><%= question.answers.count %> Answers</li>		
+			
+	</ul>
 	</article>
 	<% end %>
 
