--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,10 +10,14 @@
   <!--
     application.css is where you put your styles
   -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/application.css">
 
+  <script src="js/bootstrap.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+
 
   <title></title>
 </head>
@@ -27,16 +31,16 @@
       <form action="/logout" method="post">
         <input type="hidden" name="_method" value="delete">
         <input type="submit" value="logout">
-      <button><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></button>
+        <button><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></button>
       </form>
 
       <% else %>
-        <button><a href="/">home</a></button>
-        <button><a href="/login">login</a></button>
-        <button><a href="/login">register</a></button>
+      <button><a href="/">home</a></button>
+      <button><a href="/login">login</a></button>
+      <button><a href="/login">register</a></button>
       <% end %>
 
-  </nav>
+    </nav>
   </header>
   <%= yield %>
 </body>
