--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <div class="headline">
-	<a href="/questions/ask">Ask a Question</a>
+	<a href="/questions/ask" class="btn question">Ask a Question</a>
 </div>
 <div class= "container">
 
