--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,22 +23,23 @@
 </head>
 <body>
   <header>
-    <h1>LumberJackOverFlow</h1>
-    <nav class= "navbar">
+    <nav class= "navbar navbar-default">
+    <h1 class="navbar-brand">LumberJackOverFlow</h1>
 
       <%  if current_user %>
-      <button><a href="/">home</a></button>
-      <form action="/logout" method="post">
-        <input type="hidden" name="_method" value="delete">
-        <input type="submit" value="logout">
-        <button><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></button>
-      </form>
+      <ul class="navbar" id="options">
+        <li><button><a href="/">home</a></button></li>
 
-      <% else %>
-      <button><a href="/">home</a></button>
-      <button><a href="/login">login</a></button>
-      <button><a href="/login">register</a></button>
-      <% end %>
+        <li><form action="/logout" method="post">
+          <input type="hidden" name="_method" value="delete">
+          <input type="submit" value="logout">
+        </form></li>
+        <li><button><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></button></li>
+        <% else %>
+        <button><a href="/">home</a></button>
+        <button><a href="/login">login</a></button>
+        <button><a href="/login">register</a></button>
+        <% end %>
 
     </nav>
   </header>
