--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -27,13 +27,13 @@
   <form method="post" action="/questions/<%= @question.id %>/votes">
     <input type="submit" value="Upvote">
   </form>
-  <% if current_user %>
-  <button id="answer"><a href="#">Add an answer!</a></button>
+
+  <button id="answer"><a href="">Add an answer!</a></button>
     <form class="answer_form" method="post" target="/questions/<%= @question.id %>/answers">
       <input name="answer[content]" type="text" placeholder="Enter your answer!">
       <input id="submit_answer" type="submit" value="Submit your answer!">
     </form>
-    <% end %>
+
   </div>
 </div>
 <div id="answer-container">
