--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -28,9 +28,9 @@
     <input type="submit" value="Upvote">
   </form>
 
-  <button id="answer"><a href="">Add an answer!</a></button>
+  <button id="answer_button"><a href="">Add an answer!</a></button>
     <form class="answer_form" method="post" target="/questions/<%= @question.id %>/answers">
-      <input name="answer[content]" type="text" placeholder="Enter your answer!">
+      <input name="answer[content]" type="text" placeholder="Enter your answer!" autocomplete="off">
       <input id="submit_answer" type="submit" value="Submit your answer!">
     </form>
 
