--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -36,7 +36,8 @@
     <% end %>
   </div>
 </div>
+
 <div id="answer-container">
-<%= erb :"questions/_answers", locals: {answers: @answers}  %>
+<%= erb :"questions/_answers", locals: {answers: @answers, the_id: @question.id}  %>
 </div>
 
