Add some ajax for best answer but then hashed it out

--- a/app/views/questions/_answers.erb
+++ b/app/views/questions/_answers.erb
@@ -2,4 +2,9 @@
   <p><%= answer.content %></p>
   <p class="author">By: <%=User.find_by(id: answer.user_id).username %></p>
 
+  <form id="best_answer" name="best_answer" action="/questions/<%= answer.question_id %>/answers/<%= answer.id %>/best_answer" method="post">
+    <button id='button' type='submit'>Best Answer?!</button>
+  </form>
+
+
 <% end %>
