--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -7,8 +7,8 @@
     <div id="comments">
       <% @comments.each do |comment| %>
       <br>
-      <%= comment.content %>
-      <%= @username %>
+      <%= comment.content %>////
+      <%= User.find_by(id: comment.user_id).username%> ///
       <%= comment.created_at %>
       <% end %>
     </div>
