--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,7 +26,7 @@
     <nav class= "navbar navbar-nav navbar-fixed top navbar-inverse">
 
       <div class="container">
-        <h1 class="navbar-brand navbar-inverse">LumberJackOverFlow</h1>
+        <h1 class="navbar-brand navbar-inverse fa fa-gavel"> LumberJackOverFlow</h1>
         <%  if current_user %>
         <ul class="nav nav-pills navbar-right">
           <li><button class="btn btn-default navbar-btn"><a href="/">home</a></button></li>
