--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,6 +6,26 @@ ul {
 	list-style-type: none;
 }
 
+.arrow-up {
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 5px solid black;
+}
+
+#vote {
+	background:none;
+  border:none;
+}
+
+div.upvote{
+	background-color: grey;
+	padding: 10px;
+	width: 50px;
+
+}
+
 .btn {
 	display: inline-block;
 	padding: 6px 12px;
