complete css working on my computer etc

--- a/app/views/User/show.erb
+++ b/app/views/User/show.erb
@@ -2,7 +2,7 @@
 
 	<h1 class="fa fa-user"> <%= @user.username %></h1>
 </div>
-<div class = "container">
+<div class = "user_question">
 	<% @user.questions.each do |question| %>
 	<article>
 		<ul class="list-group">
