--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,7 +28,6 @@
       <div class="container">
 
         <h1 class="navbar-brand navbar-inverse fa fa-gavel"> LumberJackOverFlow</h1>
-        <%  if current_user %>
         <ul class="nav nav-pills navbar-right">
         <%  if current_user %>
           <li><button class="btn btn-default navbar-btn"><a href="/">home</a></button></li>
@@ -52,10 +51,11 @@
       </ul>
 
     </nav>
+  </div>
   </header>
-  <div class="container2">
+<br>
+  <div class="yield_stuff">
     <%= yield %>
   </div>
-</div>
 </body>
 </html>
