--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,6 +2,42 @@
 	display: none;
 }
 
+#answer-block{
+	margin-left: 25%;
+	background-color: #d3d3d3;
+	text-align: center;
+	display: inline-block;
+	padding: 20px;
+	width: 50%;
+}
+
+div#upper{
+	background-color: #d3d3d3;
+	margin-top: 5%;
+	text-align: center;
+	display: inline-block;
+	padding: 20px;
+}
+
+#comment_header{
+	padding: 0;
+	margin: 0 auto;
+}
+
+.comment{
+	background-color: #e6e6e6;
+	padding: 5px;
+	width: 400px;
+	margin: 0 auto;
+  border: 1px dotted grey;
+
+}
+
+#comments{
+  text-align: center;
+}
+
+
 ul {
 	list-style-type: none;
 }
@@ -19,11 +55,14 @@ ul {
   border:none;
 }
 
-div.upvote{
-	background-color: grey;
-	padding: 10px;
-	width: 50px;
 
+div.upvote{
+	background-color: white;
+	font-size: 12px;
+	padding: 0;
+	width: 50px;
+	margin: 0;
+	text-align: center;
 }
 
 .btn {
@@ -33,6 +72,7 @@ div.upvote{
 	font-size: 14px;
 	font-weight: normal;
 	line-height: 1.42857143;
+	background-color: black;
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: middle;
@@ -50,7 +90,15 @@ div.upvote{
 }
 
 .question {
-	margin-left: 100px;
+	margin: 0 auto;
+	display: inline-block;
+}
+
+
+
+#top{
+	margin: 0 auto;
+	padding: 10px;
 }
 
 .navbar-brand {
@@ -64,20 +112,30 @@ div.upvote{
 	position: relative;
 	min-height: 50px;
 	margin-bottom: 20px;
-	border: 1px solid transparent;
 	display:inline-block;
 }
 .navbar-default {
-	background-color: #f8f8f8;
-	border-color: #e7e7e7;
+	background-color: black;
+
 }
 li {
 	display: inline;
 }
 
-.container {
-	width: 1400px;
+img.resize{
+   max-width:50%;
+   max-height:50%;
+}
 
+.container {
+  position:fixed;
+  padding:0;
+  margin:0;
+  top:0;
+  left:0;
+	background: black;
+  width: 100%;
+  height: 11%;
 }
 .navbar li {
 	padding: 15px 15px;
@@ -85,19 +143,26 @@ li {
 
 
 .navbar-inverse {
-	background-color: #222;
-	border-color: #080808;
+	background-color: black;
 }
 
-.container2 {
+.yield_stuff {
 	text-align:center;
+	margin-top: 6%;
 }
 a {
-	color:#222;
+	color :grey;
+	text-decoration: none;
 }
+
+a hover{
+	color :grey;
+	text-decoration: none;
+}
+
 .navbar-right {
 	float: right !important;
-	margin-right: 150px;
+	margin-right: 10%;
 }
 
 .list-group {
