debugged a couple css errors

--- a/app/views/questions/_add_comment.erb
+++ b/app/views/questions/_add_comment.erb
@@ -1,4 +1,4 @@
 <div id="comments">
-  <br>
-  <p> <%= comment.content  %> <%=  user.username   %> <%=  comment.created_at %> </p>
+
+  <p class="comment"> <%= comment.content  %><br> <%=  user.username   %><br> <%=  comment.created_at %> </p>
 </div>
