--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,6 +13,7 @@
 
 div#upper{
 	background-color: #d3d3d3;
+	width: 50%;
 	margin-top: 5%;
 	text-align: center;
 	display: inline-block;
@@ -27,7 +28,7 @@ div#upper{
 .comment{
 	background-color: #e6e6e6;
 	padding: 5px;
-	width: 400px;
+	width: 60%;
 	margin: 0 auto;
   border: 1px dotted grey;
 
@@ -135,7 +136,7 @@ img.resize{
   left:0;
 	background: black;
   width: 100%;
-  height: 11%;
+  height: 20%;
 }
 .navbar li {
 	padding: 15px 15px;
@@ -162,7 +163,7 @@ a hover{
 
 .navbar-right {
 	float: right !important;
-	margin-right: 10%;
+	margin-right: 0;
 }
 
 .list-group {
